--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,7 +41,7 @@ p, a, li {
 
 /* Floral Divider */
 .floral-divider {
-  background: url('/floral-bg.png') center/cover;
+  background: url('C:\Users\saras\Downloads\journalling.jpg') center/cover;
   height: 50px;
   margin: 2rem 0;
   opacity: 0.5;
